--- a/awantura_o_kase/panel_admin/templates/admin_panel.html
+++ b/awantura_o_kase/panel_admin/templates/admin_panel.html
@@ -147,18 +147,46 @@
 
 			<!-- Dodatkowe przyciski -->
 			<div class="action-container flex flex-row w-full min-h-[10%] gap-[10%] justify-center">
-				<button class="w-[12%] px-2 bg-neutral-300 hover:bg-neutral-400 active:bg-neutral-500 text-black rounded-full">Kara</button> <!-- dodaj modal do tego-->
-				<button class="w-[12%] px-2 bg-neutral-300 hover:bg-neutral-400 active:bg-neutral-500 text-black rounded-full">1 na 1</button> <!-- dodaj modal do tego-->
-				<button class="w-[12%] px-2 bg-neutral-300 hover:bg-neutral-400 active:bg-neutral-500 text-black reset-gry rounded-full" data-modal-target="popup-modal" data-modal-toggle="popup-modal">Reset gry(?)</button>
+				<button class="w-[12%] px-2 bg-neutral-300 hover:bg-neutral-400 active:bg-neutral-500 text-black rounded-full uppercase font-bold">Kara</button> <!-- dodaj modal do tego-->
+				<button class="w-[12%] px-2 bg-neutral-300 hover:bg-neutral-400 active:bg-neutral-500 text-black rounded-full uppercase font-bold">1 na 1</button> <!-- dodaj modal do tego-->
+				<button class="w-[12%] px-2 bg-neutral-300 hover:bg-neutral-400 active:bg-neutral-500 text-black reset-gry rounded-full uppercase font-bold" data-modal-target="popup-modal-reset-rundy" data-modal-toggle="popup-modal-reset-gry">Reset rundy</button>
+				<button class="w-[12%] px-2 bg-neutral-300 hover:bg-neutral-400 active:bg-neutral-500 text-black reset-gry rounded-full uppercase font-bold" data-modal-target="popup-modal-reset-gry" data-modal-toggle="popup-modal-reset-gry">Reset gry(?)</button>
 			</div>
 		</div>
 	</section>
 	
 	<!-- Modale -->
-	<div id="popup-modal" tabindex="-1" class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full">
+	<div id="popup-modal-reset-rundy" tabindex="-1" class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full">
 		<div class="relative p-4 w-full max-w-md max-h-full">
 			<div class="relative bg-white rounded-lg shadow dark:bg-gray-700">
-				<button type="button" class="absolute top-3 end-2.5 text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center dark:hover:bg-gray-600 dark:hover:text-white" data-modal-hide="popup-modal">
+				<button type="button" class="absolute top-3 end-2.5 text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center dark:hover:bg-gray-600 dark:hover:text-white" data-modal-hide="popup-modal-reset-rundy">
+					<svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
+						<path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"/>
+					</svg>
+					<span class="sr-only">Close modal</span>
+				</button>
+				<div class="p-4 md:p-5 text-center">
+					<svg class="mx-auto mb-4 text-gray-400 w-12 h-12 dark:text-gray-200" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
+						<path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 11V6m0 8h.01M19 10a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z"/>
+					</svg>
+					<h3 class="mb-5 text-lg font-normal text-gray-500 dark:text-gray-400">Czy NA PEWNO chcesz zresetować obecną rundę?</h3>
+					<form method = "post" action = "{% url 'gra' %}">{% csrf_token %}
+						<button type = "submit" name = "reset" value = "reset" data-modal-hide="popup-modal-reset-rundy" type="button" class="text-white bg-red-600 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 dark:focus:ring-red-800 font-medium rounded-lg text-sm inline-flex items-center px-5 py-2.5 text-center">
+							Tak, na pewno
+						</button>
+						<button data-modal-hide="popup-modal-reset-rundy" type="button" class="py-2.5 px-5 ms-3 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-100 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700">
+							No kurde w sumie to nie
+						</button>
+					</form>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div id="popup-modal-reset-gry" tabindex="-1" class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full">
+		<div class="relative p-4 w-full max-w-md max-h-full">
+			<div class="relative bg-white rounded-lg shadow dark:bg-gray-700">
+				<button type="button" class="absolute top-3 end-2.5 text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center dark:hover:bg-gray-600 dark:hover:text-white" data-modal-hide="popup-modal-reset-gry">
 					<svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
 						<path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"/>
 					</svg>
@@ -170,10 +198,10 @@
 					</svg>
 					<h3 class="mb-5 text-lg font-normal text-gray-500 dark:text-gray-400">Czy NA PEWNO chcesz zresetować grę?</h3>
 					<form method = "post" action = "{% url 'gra' %}">{% csrf_token %}
-						<button type = "submit" name = "reset" value = "reset" data-modal-hide="popup-modal" type="button" class="text-white bg-red-600 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 dark:focus:ring-red-800 font-medium rounded-lg text-sm inline-flex items-center px-5 py-2.5 text-center">
+						<button type = "submit" name = "reset" value = "reset" data-modal-hide="popup-modal-reset-gry" type="button" class="text-white bg-red-600 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 dark:focus:ring-red-800 font-medium rounded-lg text-sm inline-flex items-center px-5 py-2.5 text-center">
 							Tak, na pewno
 						</button>
-						<button data-modal-hide="popup-modal" type="button" class="py-2.5 px-5 ms-3 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-100 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700">
+						<button data-modal-hide="popup-modal-reset-gry" type="button" class="py-2.5 px-5 ms-3 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-100 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700">
 							No kurde w sumie to nie
 						</button>
 					</form>
