--- a/awantura_o_kase/panel_admin/templates/admin_panel.html
+++ b/awantura_o_kase/panel_admin/templates/admin_panel.html
@@ -521,6 +521,87 @@
 				</div>
 			</div> 
 
+      {% elif message.message == "1 na 1 - etap 3" %}
+      <div id="popup-modal-1-na-1-etap-3" tabindex="-1" class="flex overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full">
+				<div modal-backdrop="popup-modal-1-na-1-etap-3" class="bg-gray-900/50 dark:bg-gray-900/80 fixed inset-0"></div>
+				<div class="relative p-4 w-full max-w-xl max-h-full">
+					<div class="relative rounded-lg shadow bg-gray-700">
+						
+
+            
+
+
+
+              <div class="p-4 md:p-5 text-center">
+                <h3 class="mb-5 text-lg font-normal text-gray-300">1 na 1 - ETAP 3! Przeczytaj pytanie, wybierz kto odpowiadal</h3>
+
+                <div class="pytanie-odpowiedz w-full flex flex-row overflow-hidden bg-neutral-800/75 border-4 border-neutral-900 divide-x-4 divide-neutral-900 mb-5">
+                  <div class="flex-[7] relative overflow-auto p-3 min-h-full text-lg">
+                    <span class="!absolute !top-1 !left-0 !right-0 m-auto text-xs awantura-font text-center text-gray-500">Tresc pytania</span>
+                    <span class="!top-2 relative">{{tresc_pytania}}</span>
+                  </div>
+                </div>
+                
+                
+                  <form method="post" action="{% url 'gra' %}" class="flex w-full flex-col gap-5 items-center">
+                    <div class="flex w-full gap-5">
+                  {% csrf_token %}
+                  
+                  <label class="inline-flex cursor-pointer basis-0 grow-[5]">
+                    <input type="radio" name="1na1-druzyna" id="1na1-niebiescy" value="niebiescy" class="sr-only peer jeden-check-zwyciezca">
+                    <div class="peer peer-focus:outline-none peer-checked:ring-4 peer-checked:ring-gray-300 peer peer-checked:after:translate-x-full peer-checked:text-gray-500 peer-checked:bg-[rgb(8,26,77)] rounded relative h-full flex items-center justify-start text-2xl basis-0 grow-[5] bg-[rgb(8,35,112)] button">
+                      <span class="p-5 m-auto text-xs awantura-font">NIEBIESCY</span>
+                    </div>
+                  </label>
+                  <label class="inline-flex cursor-pointer basis-0 grow-[5] rounded">
+                    <input type="radio" name="1na1-druzyna" id="1na1-zieloni" value="zieloni" class="sr-only peer jeden-check-zwyciezca">
+                    <div class="peer peer-focus:outline-none peer-checked:ring-4 peer-checked:ring-gray-300 peer peer-checked:after:translate-x-full peer-checked:text-gray-500 peer-checked:bg-[rgb(3,44,29)] rounded relative h-full flex items-center justify-start text-2xl basis-0 grow-[5] bg-[rgb(2,65,43)] button">
+                      <span class="m-auto text-xs awantura-font">ZIELONI</span>
+                    </div>
+                  </label>
+                  <label class="inline-flex cursor-pointer basis-0 grow-[5]">
+                    <input type="radio" name="1na1-druzyna" id="1na1-zolci" value="zolci" class="sr-only peer jeden-check-zwyciezca">
+                    <div class="peer peer-focus:outline-none peer-checked:ring-4 peer-checked:ring-gray-300 peer peer-checked:after:translate-x-full peer-checked:text-gray-500 peer-checked:bg-yellow-800 rounded relative h-full flex items-center justify-start text-2xl basis-0 grow-[5] bg-yellow-500 button">
+                      <span class="m-auto text-xs awantura-font">ZOLCI</span>
+                    </div>
+                  </label>
+                  <label class="inline-flex cursor-pointer basis-0 grow-[5]">
+                    <input type="radio" name="1na1-druzyna" id="1na1-mistrzowie" value="mistrzowie" class="sr-only peer jeden-check-zwyciezca">
+                    <div class="peer peer-focus:outline-none peer-checked:ring-4 peer-checked:ring-gray-300 peer peer-checked:after:translate-x-full peer-checked:text-gray-500 peer-checked:bg-[rgb(38,13,39)] rounded relative h-full flex items-center justify-start text-2xl basis-0 grow-[5] bg-[rgb(54,41,66)] button">
+                      <span class="m-auto text-xs awantura-font">MISTRZOWIE</span>
+                    </div>
+                  </label>
+                  </div>
+
+                  <div class="flex gap-5">
+                    <button type="submit" name="1-na-1-etap-3-dobrze" value="1-na-1-etap-3-dobrze" data-modal-hide="popup-modal-1-na-1-etap-3" class="text-white bg-green-600 hover:bg-green-800 focus:ring-4 focus:outline-none focus:ring-green-300 dark:focus:ring-green-800 font-medium rounded-lg text-sm inline-flex items-center px-5 py-2.5 text-center">
+                      DOBRZE
+                    </button>
+                    <button type="submit" name="1-na-1-etap-3-zle" value="1-na-1-etap-3-zle" data-modal-hide="popup-modal-1-na-1-etap-3" class="text-white bg-red-600 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 dark:focus:ring-red-800 font-medium rounded-lg text-sm inline-flex items-center px-5 py-2.5 text-center">
+                      ZLE
+                    </button>
+                  </div>
+
+                  
+                </form>
+              </div>
+
+						
+					</div>
+				</div>
+			</div> 
+
+
+
+      
+
+
+
+
+
+
+
+
 			{% else %}
 				
 				<div data-modal-target="bottom-right-modal" id="bottom-right-modal" data-modal-placement="bottom-right" tabindex="-1" class="fixed top-0 left-0 right-0 bottom-0 z-50 w-full p-4 overflow-x-hidden overflow-y-auto md:inset-0 h-[calc(100%-1rem)] max-h-full justify-center items-center flex" aria-modal="true" role="dialog">
@@ -610,6 +691,8 @@
 				}
 			}
 		})
+
+    
 	</script>
 </body>
 
