--- a/awantura_o_kase/panel_admin/templates/stream_panel.html
+++ b/awantura_o_kase/panel_admin/templates/stream_panel.html
@@ -16,8 +16,9 @@
         <button type = "submit" name = "wylaczony" value = "wylaczony">Wyłączony</button>
         <button type = "submit" name = "stany-kont" value = "stany-kont">Stany kont</button>
         <button type = "submit" name = "licytacja" value = "licytacja">Licytacja</button>
-        <button type = "submit" name = "kupowanie-podpowiedzi" value = "kupowanie-podpowiedzi">Kupowanie podpowiedzi</button>
-        <button type = "submit" name = "wykupienie-zawodnika" value = "wykupienie-zawodnika">Wykupienie zawodnika</button>
+        <button type = "submit" name = "pytanie" value = "wykupienie-zawodnika">Pytanie</button>
+        <button type = "submit" name = "pytanie-podpowiedzi" value = "pytanie-podpowiedzi">Pytanie+Podpowiedzi</button>
+        
 
     </form>
 </body>
