--- a/awantura_o_kase/panel_admin/templates/stream_panel.html
+++ b/awantura_o_kase/panel_admin/templates/stream_panel.html
@@ -12,6 +12,7 @@
     <h1>Wybierz opcję</h1>
     <form method = "post" action = "{% url 'stream_panel' %}">{% csrf_token %}
         <button type = "submit" name = "czas" value="czas">Toggle czas (true/false)</button>
+        <button type = "submit" name = "wyswietl_pytanie" value = "wyswietl_pytanie">Wyświetl pytanie</button>
         <br/><br/>
         <button type = "submit" name = "wylaczony" value = "wylaczony">Wyłączony</button>
         <button type = "submit" name = "stany-kont" value = "stany-kont">Stany kont</button>
