--- a/frontend/src/css/global.css
+++ b/frontend/src/css/global.css
@@ -23,43 +23,45 @@ body {
 }
 
 .StanyKont, .Licytacja, .KupowaniePodpowiedzi, .WykupienieZawodnika {
-    height: 95px;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-  }
+  height: 95px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
   
-  .awantura-font p,
-  p.awantura-font{
-    font-family: var(--awantura-font);
-    position: relative;
-    top: 5px;
-    left: 3px;
-  }
-  
-  .opis {
-    background-color: var(--pasek-ciemny);
-    /* height: 25px; */
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-family: var(--eurostile-font);
-  }
+.awantura-font p,
+p.awantura-font{
+  font-family: var(--awantura-font);
+  position: relative;
+  top: 5px;
+  left: 3px;
+}
 
-  .opis p {
-    letter-spacing: 1.5px;
-    font-size: 1.25rem;
-    line-height: calc(1.75 / 1.25);
-  }
+.vt323-font p,
+p.vt323-font{
+  font-family: var(--vt323-font);
+  letter-spacing: 1px;
+}
   
-  .eurostile-font p{
-    font-family: var(--eurostile-font);
-  }
-  
-  .vt323-font p{
-    font-family: var(--vt323-font);
-  }
-  
-  .questrial-font p{
-    font-family: var(--questrial-font);
-  }
+.opis {
+  background-color: var(--pasek-ciemny);
+  /* height: 25px; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: var(--eurostile-font);
+}
+
+.opis p {
+  letter-spacing: 1.5px;
+  font-size: 1.25rem;
+  line-height: calc(1.75 / 1.25);
+}
+
+.eurostile-font p{
+  font-family: var(--eurostile-font);
+}
+
+.questrial-font p{
+  font-family: var(--questrial-font);
+}
