--- a/frontend/src/css/global.css
+++ b/frontend/src/css/global.css
@@ -31,7 +31,7 @@ body {
   
 .awantura-font p,
 p.awantura-font{
-  font-family: var(--awantura-font);
+  font-family: var(--awantura-font)!important;
   position: relative;
   top: 5px;
   left: 3px;
@@ -48,7 +48,6 @@ p.vt323-font{
   /* height: 25px; */
   display: flex;
   align-items: center;
-  justify-content: center;
   font-family: var(--eurostile-font);
 }
 
